--- a/Completed/01-Flexbox/Items/css/style.css
+++ b/Completed/01-Flexbox/Items/css/style.css
@@ -18,7 +18,7 @@ div > div {
 /* de flexcontainer */
 h1+div {
   border: 2px solid black;
-  display: flex;
+  display: block flex;
 }
 
 /* Flex items */
